manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: ce82263409acr.azurecr.io/todo
          ports:
          - containerPort: 8080
