manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: todo-service
spec:
    ports:
    - port: 8080 
    selector:
        app: todo
